--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,9 @@ jobs:
       # Deploy
     - name: Deploy to Elastic Beanstalk
       run: >
-        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws configure set default.region ${{ secrets.AWS_DEFAULT_REGION }}
+        aws configure --profile GitProfile
+        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} --profile GitProfile
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} --profile GitProfile
+        aws configure set default.region ${{ secrets.AWS_DEFAULT_REGION }} --profile GitProfile
         eb deploy 
       
