--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
       run: >
         python -m pip install --upgrade 
         pip pip install awsebcli
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install
       # Deploy
     - name: Deploy to Elastic Beanstalk
       run: >
