--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       run: >
         python -m pip install --upgrade 
         pip pip install awsebcli
-        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" "awscliv2.zip"
         unzip awscliv2.zip
         sudo ./aws/install
       # Deploy
