--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,7 @@ jobs:
       run: >
         python -m pip install --upgrade 
         pip pip install awsebcli
-        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install
+        pip3 install awscli --upgrade --user
       # Deploy
     - name: Deploy to Elastic Beanstalk
       run: >
