--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         pip pip install awsebcli
       # Deploy
     - name: Deploy to Elastic Beanstalk
-      run: >
+      run: |
         aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} 
         aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
